@@ -293,6 +293,8 @@ DECL_TEMPLATE(linux, sys_memfd_create);
 
 DECL_TEMPLATE(linux, sys_syncfs);
 
+DECL_TEMPLATE(linux, sys_membarrier);
+
 /* ---------------------------------------------------------------------
    Wrappers for sockets and ipc-ery.  These are split into standalone
    procedures because x86-linux hides them inside multiplexors
